--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -27,11 +27,14 @@
     grid-area: main__servicios;     
  }
 
- 
-
- 
 
 /* Fin de Grillas */
+.body{
+   position: relative;
+   padding-bottom: 100px;
+   min-height: 100vh;
+
+}
 
 /* Menu */
 .header{
@@ -41,6 +44,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: #fff;
+    background: linear-gradient(86deg, rgba(172,221,53,0.6474964985994398) 0%, rgba(0,212,255,0.22172619047619047) 67%);
 }
 
 .header__logo{
@@ -79,7 +83,7 @@
 /* Index.html */
 
 .hero__conte{
-    background-image: url('../imagenes/imagen1920x808.webp') ;
+    background-image: url('../imagenes/imagen1920x808.webp');
     height: 50vh;
     display: flex;
     align-items: center;
@@ -160,9 +164,11 @@
 
 .footer{
     
-    background: Linear-gradient(white, #3fa6e2);
-    position: relative;
+    background: linear-gradient(270deg, rgba(172,221,53,0.6474964985994398) 0%, rgba(0,212,255,0.22172619047619047) 67%);
+    position: absolute;
+    bottom: 0;
     width: 100%;
+    
       
 }
 
@@ -260,15 +266,17 @@
 .nosotros__section{
     color: #726659;
     padding: 40px 40px;
-    display: flex;
     gap: 50px;
     align-items: center;
         
 }
 .nosotros__imagen{
     width: 100%;
-    
-   
+  
+}
+.img__nosotros{
+    width: 40%;
+    height: 40%;
 }
 .nosotros__contenido{
     flex-basis: 100%;
@@ -332,10 +340,26 @@
     text-align: center;
     
 }
-.servicios__imagen{
+.servicios__imagen1{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 300px;
+    height: 300px;
+}
+.servicios__imagen2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 300px;
+}
+.servicios__imagen3{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+    height: 300px;
 }
 .servicios__lista{
     padding: 10px 100px;
@@ -353,6 +377,22 @@
     justify-content: center;
     gap: 50px;
 }
+.clientes__imagen1{
+    width: 100%;
+    height: 100%;
+}
+.clientes__imagen2{
+    width: 70%;
+    height: 70%;
+}
+.clientes__imagen3{
+    width: 100%;
+    height: 100%;
+}
+.clientes__imagen4{
+    width: 100%;
+    height: 100%;
+}
 
 /* Media Queries */
 
@@ -363,7 +403,7 @@
     .header__logo{
         width: 8em;
         height: 8em;
-        margin: 20px;
+        margin: 15px;
     }
     .main__servicios {
         flex-direction: column;
@@ -375,9 +415,145 @@
     .articulos{
         font-size: 0.7em;
         }
+    /* media queries nosotros.html*/
+    .nosotros__section{
+        display: mow-flex;
+    }
+    .img__nosotros{
+        width: 20%;
+        height: 20%;
+    }
+      /* media queries servicios.html */
 
+ .servicios__main{
+    display: inline-block;
+    width: 100%;
+    
+    
+  }
+
+ 
+#servicios__1{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 50px;
+   
 }
+#servicios__2{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    gap: 50px;
+    
+}
+#servicios__3{
+   display: flex;
+   flex-direction: column;
+    padding: 2rem;
+    gap: 50px;
+}
+.servicios__contenido{
+    width: 100%;
     
 
+}
+.servicios__titulos{
+    color: #000;
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    
+}
+.servicios__texto{
+    padding: 10px;
+    color: #726659;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    
+}
+.servicios__imagen1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+}
+.servicios__imagen2{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+}
+.servicios__imagen3{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+}
+.servicios__lista{
+    padding: 10px ;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; 
+    font-size: 1.2rem;
+    color: #3fa6e2;
+}
 
+/* media queries clientes.html */
+
+.clientes__main{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+.clientes__imagen1{
+    width: 80;
+    height: 80%;
+}
+.clientes__imagen2{
+    width: 60%;
+    height: 60%;
+}
+.clientes__imagen3{
+    width: 80%;
+    height: 80%;
+}
+.clientes__imagen4{
+    width: 80%;
+    height: 80%;
+}
+
+/* media queries contacto.html*/
+.formulario {
+    position: relative;
+    width: 320px;
+    align-items: center;
+  }
+  
+  input {
+    width: 300px;
+  }
+      
+  textarea {
+    width: 300px;
+    max-width: 300px;
+  }
+      
+  #submit {
+    width: 300px;
+  }
+  
+}
+
+@media screen and (min-width: 375px){
+    .nosotros__section{
+        display: flex;
+    }
+    
+}
 
