--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -45,7 +45,10 @@
     flex-wrap: wrap;
     background-color: #fff;
     background: linear-gradient(86deg, rgba(172,221,53,0.6474964985994398) 0%, rgba(0,212,255,0.22172619047619047) 67%);
+    
 }
+
+
 
 .header__logo{
     width: 80px;
@@ -156,6 +159,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 290px;
+    height: 290px;
 }
 
 /* Fin de Index.html*/
