--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -4,31 +4,6 @@
     box-sizing: border-box;
 }
 
-/* Grillas */
-#grilla__index {
-    display: grid;
-    grid-template-areas:
-      "header"
-      "main"
-      "main__servicios"
-      "footer";
-}
- 
- header {
-    grid-area: header;
- }
- footer {
-    grid-area: footer;
- }
- main {
-    grid-area: main;     
- }
- main__servicios {
-    grid-area: main__servicios;     
- }
-
-
-/* Fin de Grillas */
 .body{
    position: relative;
    padding-bottom: 100px;
@@ -37,33 +12,17 @@
 }
 
 /* Menu */
-.header{
-    display:flex;
+.navbar{
     padding: 10px 20px;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
     background: linear-gradient(86deg, rgba(172,221,53,0.6474964985994398) 0%, rgba(0,212,255,0.22172619047619047) 67%);
-    
+ 
 }
-
-
-
-.header__logo{
+.nav__logo{
     width: 80px;
     height: 80px;
     margin: 10px;
 }
-
-.header__nav{
-    text-align: center;
-  }
-
-.nav__menu__item{
-    display: inline-block;
-    
-}
-.nav__menu__link{
+.nav-link{
     background: transparent;
     border-bottom: solid 2px #3fa6e2;
     padding: 10px 30px;
@@ -74,7 +33,7 @@
     font-size: 1rem;
     display: block;
 }
-.nav__menu__link:hover{
+.nav-link:hover{
     background: #3fa6e2;
     color: #fff;
     border-radius: 4px;
@@ -189,11 +148,12 @@
 .footer{
     
     background: linear-gradient(270deg, rgba(172,221,53,0.6474964985994398) 0%, rgba(0,212,255,0.22172619047619047) 67%);
-    position: absolute;
     bottom: 0;
     width: 100%;
-    
+    height: 140px;
+   
 }
+
 
 .footer h3 {
     padding: 2rem;
@@ -391,31 +351,7 @@
     color: #3fa6e2;
 }
 /* Fin de Servicios*/
-/* Clientes */
 
-.clientes__main{
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-.clientes__imagen1{
-    width: 100%;
-    height: 100%;
-}
-.clientes__imagen2{
-    width: 70%;
-    height: 70%;
-}
-.clientes__imagen3{
-    width: 100%;
-    height: 100%;
-}
-.clientes__imagen4{
-    width: 100%;
-    height: 100%;
-}
 
 /* Media Queries */
 
@@ -524,32 +460,6 @@
     color: #3fa6e2;
 }
 
-/* media queries clientes.html */
-
-.clientes__main{
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    gap: 50px;
-}
-.clientes__imagen1{
-    width: 80;
-    height: 80%;
-}
-.clientes__imagen2{
-    width: 60%;
-    height: 60%;
-}
-.clientes__imagen3{
-    width: 80%;
-    height: 80%;
-}
-.clientes__imagen4{
-    width: 80%;
-    height: 80%;
-}
 
 /* media queries contacto.html*/
 .formulario {
