--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -1,3 +1,16 @@
+@import "./botones";
+@import "./responsivemixins";
+
+.tituloForm {
+  padding-top: 15px;
+  font-size: 30px;
+  color: rgb(82, 163, 238);
+  text-align: center;
+  
+  @include movil {
+    font-size: 20px;
+  }
+}
 .formulario {
     position: relative;
     width: 500px;
@@ -18,7 +31,7 @@
     border: solid 1px #b3aca7;
     border-bottom: none;
     
-    & :hover {
+    &:hover {
       background: #b3aca7;
       color: #e2dedb;
     }
@@ -41,30 +54,12 @@
     
     border: solid 1px #b3aca7;
     
-    & :hover {
+    &:hover {
       background: #b3aca7;
       color: #e2dedb;
     }
    }
   
   
-  #submit {
-    background: transparent;
-    border-bottom: solid 2px #3fa6e2;
-    padding: 10px 30px;
-    text-decoration: none;
-    color: #3fa6e2;
-    font-family: Arial, Helvetica, sans-serif;
-    transition: backgroumd 0.5s color 0.4s;
-    font-size: 1rem;
-    display: block;
-    
-    & :hover {
-    
-      background: #3fa6e2;
-      color: #fff;
-      border-radius: 4px;
-    }
-    
-  }
+ 
   
