--- a/scss/parciales/_contacto.scss
+++ b/scss/parciales/_contacto.scss
@@ -1,6 +1,9 @@
 @import "./botones";
 @import "./responsivemixins";
 
+.sectionForm{
+  width: auto;
+}
 .tituloForm {
   padding-top: 15px;
   font-size: 30px;
